tbd Sun Microsystems, Inc.
	* version 1.8.0
	* Support for kernels:
	 2.6.5-7.311 (SLES 9),
	 2.6.9-67.0.15.EL (RHEL 4),
	 2.6.16.54-0.2.5 (SLES 10),
         2.6.18-53.1.19.el5 (RHEL 5),
	 2.6.22.14 vanilla (kernel.org)
	* Client support for unpatched kernels:
	  (see http://wiki.lustre.org/index.php?title=Patchless_Client)
	  2.6.16 - 2.6.22 vanilla (kernel.org)
	* Client support for unpatched kernels:
	  we do not recommend using patchless RHEL4 clients with kernels
	  prior to 2.6.9-55EL (RHEL4U5).
	* Recommended e2fsprogs version: 1.40.7-sun3
	* Note that reiserfs quotas are disabled on SLES 10 in this kernel.
	* RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
	  removed cwd "./" (refer to Bugzilla 14399).
	* A new quota file format has been introduced in 1.6.5.
	  The format conversion from prior releases is handled transparently,
	  but releases older than 1.4.12/1.6.5 will not understand this new
	  format.  The automatic format conversion can be avoided by running
	  the following command on the MDS:
	  	'tunefs.lustre --param="mdt.quota_type=ug1" $MDTDEV'.
	  For more information, please refer to bugzilla 13904.

Severity   : major
Bugzilla   : 15924
Description: do not process already freed flock
Details    : flock can possibly be freed by another thread before it reaches
             to ldlm_flock_completion_ast.

Severity   : normal
Bugzilla   : 14480
Description: LBUG during stress test
Details    : Need properly lock accesses the flock deadlock detection list.

Severity   : minor
Bugzilla   : 15837
Description: oops in page fault handler
Details    : kernel page fault handler can return two special 'pages' in error case, don't
             try dereference NOPAGE_SIGBUS and NOPAGE_OMM.

Severity   : minor
Bugzilla   : 15716
Description: timeout with invalidate import.
Details    : ptlrpcd_check call obd_zombie_impexp_cull and wait request which should be
             handled by ptlrpcd. This produce long age waiting and -ETIMEOUT