@@ -5,7 +5,7 @@ SUPPORTED KERNELS:
 2.6-suse-newer        SLES9: 2.6.5-7.311       extra patches for SLES9 after SP1
 2.6-rhel4             RHEL4: 2.6.9-67.0.15.EL
 2.6-sles10            SLES10: 2.6.16.54-0.2.5
-2.6-rhel5             RHEL5: 2.6.18-53.1.19.el5
+2.6-rhel5             RHEL5: 2.6.18-53.1.21.el5
 2.6.18-vanilla        kernel.org: 2.6.18.8
 2.6.22-vanilla        kernel.org: 2.6.22.14
 
